Removido o paragrafo lorem

--- a/projeto.html
+++ b/projeto.html
@@ -10,19 +10,12 @@
      	<body>
 	     <h1>Primeiro site</h1>
 	 
+          <p>Formatação de texto com html</p>
 
           <p>Esse é um texto em <strong> negrito </strong> </p>
           <p>Esse é um texto em <em> itálico </em> </p>
           <p>Esse é um texto usando <u> underline </u> </p>
           <p>Esse é um texto usando strike ou <strike> trassado </strike> </p>
-          <p>Novo teste</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-
+          <
         </body>
 </html>
