--- a/projeto.html
+++ b/projeto.html
@@ -8,13 +8,23 @@
    </head>
 
      	<body>
-	     <h1>Primeiro site</h1>
+         <h2>Lista nao ordenada</h2>
+         <!--Tipos que podem ser usados em uma lista nao ordenada:
+            (cirle, square, disc)-->
+	     <ul type="circle">
+         <li>Notebook</li>
+         <li>Roteador</li>
+         <li>Mouse</li>      
+        </ul>
 	 
-          <p>Formatação de texto com html</p>
+         <h2>Lista ordenada</h2>
+         <!--Tipos que podem ser usados em uma lista ordenada:
+            A, a, I, i-->
+         <ol>
+            <li>Comida favorita</li>
+            <li>Carro favorito</li>
+            <li>Serie favorita</li> 
+         </ol>
 
-          <p>Esse é um texto em <strong> negrito </strong> </p>
-          <p>Esse é um texto em <em> itálico </em> </p>
-          <p>Esse é um texto usando <u> underline </u> </p>
-          <p>Esse é um texto usando strike ou <strike> trassado </strike> </p>
         </body>
 </html>
