--- a/projeto.html
+++ b/projeto.html
@@ -14,7 +14,23 @@
 	     <ul type="circle">
          <li>Notebook</li>
          <li>Roteador</li>
-         <li>Mouse</li>      
+         <li>Mouse</li>
+         <li>Celular</li>
+         <li>Monitor</li>      
+        </ul>
+
+        <ul type="square">
+         <li>Notebook</li>
+         <li>Roteador</li>
+         <li>Celular</li>
+         <li>Monitor</li>
+        </ul>
+
+        <ul type="disc">
+         <li>Notebook</li>
+         <li>Roteador</li>
+         <li>Celular</li>
+         <li>Monitor</li>
         </ul>
 	 
          <h2>Lista ordenada</h2>
@@ -24,6 +40,38 @@
             <li>Comida favorita</li>
             <li>Carro favorito</li>
             <li>Serie favorita</li> 
+         </ol>
+
+         <ol type="A">
+            <li>Dormir</li>
+            <li>Acordar</li>
+            <li>Tomar café</li>
+            <li>Estudar</li>
+            <li>Trabalhar</li>
+         </ol>
+
+         <ol type="a">
+            <li>Dormir</li>
+            <li>Acordar</li>
+            <li>Tomar café</li>
+            <li>Estudar</li>
+            <li>Trabalhar</li>
+         </ol>
+
+         <ol type="I">
+            <li>Dormir</li>
+            <li>Acordar</li>
+            <li>Tomar café</li>
+            <li>Estudar</li>
+            <li>Trabalhar</li>
+         </ol>
+
+         <ol type="i">
+            <li>Dormir</li>
+            <li>Acordar</li>
+            <li>Tomar café</li>
+            <li>Estudar</li>
+            <li>Trabalhar</li>
          </ol>
 
         </body>
