--- a/projeto.html
+++ b/projeto.html
@@ -8,71 +8,6 @@
    </head>
 
      	<body>
-         <h2>Lista nao ordenada</h2>
-         <!--Tipos que podem ser usados em uma lista nao ordenada:
-            (cirle, square, disc)-->
-	     <ul type="circle">
-         <li>Notebook</li>
-         <li>Roteador</li>
-         <li>Mouse</li>
-         <li>Celular</li>
-         <li>Monitor</li>      
-        </ul>
-
-        <ul type="square">
-         <li>Notebook</li>
-         <li>Roteador</li>
-         <li>Celular</li>
-         <li>Monitor</li>
-        </ul>
-
-        <ul type="disc">
-         <li>Notebook</li>
-         <li>Roteador</li>
-         <li>Celular</li>
-         <li>Monitor</li>
-        </ul>
-	 
-         <h2>Lista ordenada</h2>
-         <!--Tipos que podem ser usados em uma lista ordenada:
-            A, a, I, i-->
-         <ol>
-            <li>Comida favorita</li>
-            <li>Carro favorito</li>
-            <li>Serie favorita</li> 
-         </ol>
-
-         <ol type="A">
-            <li>Dormir</li>
-            <li>Acordar</li>
-            <li>Tomar café</li>
-            <li>Estudar</li>
-            <li>Trabalhar</li>
-         </ol>
-
-         <ol type="a">
-            <li>Dormir</li>
-            <li>Acordar</li>
-            <li>Tomar café</li>
-            <li>Estudar</li>
-            <li>Trabalhar</li>
-         </ol>
-
-         <ol type="I">
-            <li>Dormir</li>
-            <li>Acordar</li>
-            <li>Tomar café</li>
-            <li>Estudar</li>
-            <li>Trabalhar</li>
-         </ol>
-
-         <ol type="i">
-            <li>Dormir</li>
-            <li>Acordar</li>
-            <li>Tomar café</li>
-            <li>Estudar</li>
-            <li>Trabalhar</li>
-         </ol>
-
-        </body>
+      <img src="imagens/pessoa.jpg" width="600" height="600">  
+      </body>
 </html>
