--- a/index.html
+++ b/index.html
@@ -7,24 +7,54 @@
    </head>
 
      	<body>
-       <h2>Página principal</h2>
+         <h2>Produtos</h2>
+       <table border="2">
+          <tr>
+             <th>Código</th>
+             <th>Produto</th>
+             <th>Preço</th>
+             <th>Quantidade</th>
+          </tr>
 
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-       consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-       cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-       proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-       </p>
+          <tr>
+             <td>001</td>
+             <td>Celular</td>
+             <td>R$ 5.400.00</td>
+             <td>1</td>
+          </tr>
 
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-       quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-       consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-       cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-       proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-       </p>
+          <tr>
+             <td>002</td>
+             <td>Tablet</td>
+             <td>R$ 3.400.00</td>
+             <td>3</td>
+          </tr>
+       </table>
 
-       <a href="contato.html">Clique aqui</a>
+
+          <h2>Carros</h2>
+       <table border="1">
+          <tr>
+             <th>Marca</th>
+             <th>Modelo</th>
+             <th>Preço</th>
+             <th>Velocidade máxima</th>
+          </tr>
+
+          <tr>
+             <td>Ferrari</td>
+             <td>Ferrari FXX 2018</td>
+             <td>R$ 6.400.000.00</td>
+             <td>360Km/h</td>
+          </tr>
+
+          <tr>
+             <td>Lamborghini</td>
+             <td>Revuelto</td>
+             <td>R$ 7.400.000.00</td>
+             <td>350Km/h</td>
+          </tr>
+       </table>
+
       </body>
 </html>
