formatação da tabela

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
      	<body>
          <h2>Produtos</h2>
-       <table border="2">
+       <table border="2" width="50%">
           <tr>
              <th>Código</th>
              <th>Produto</th>
@@ -33,7 +33,7 @@
 
 
           <h2>Carros</h2>
-       <table border="1">
+       <table border="2" width="50%">
           <tr>
              <th>Marca</th>
              <th>Modelo</th>
@@ -50,11 +50,14 @@
 
           <tr>
              <td>Lamborghini</td>
-             <td>Revuelto</td>
+             <td>
+                
+             </td>
              <td>R$ 7.400.000.00</td>
              <td>350Km/h</td>
           </tr>
        </table>
-
+        <br>
+         <img src="imagens/lamborghini-revuelto-01-scaled.avif" width="50%" height="50%">
       </body>
 </html>
