--- a/index.html
+++ b/index.html
@@ -20,5 +20,36 @@
          <input type="button" value="Logar">   
 
       </form>
+
+      
+      <h2>Cadastre-se</h2>
+
+      <form>
+         Login:<br>
+         <input type="text" name="login"><br><br>
+
+         sexo: <br>
+         <input type="radio" name="sexo" value="M"> Masculino<br><br>
+         <input type="radio" name="sexo" value="F"> Feminino<br><br>
+         
+         Interesses<br>
+         <input type="checkbox" name="interesses">Fute<br>
+         <input type="checkbox" name="interesses">Cursos<br><input type="checkbox" name="interesses">Moda<br><br>
+
+         Estado<br>
+         <select name="estado">
+            <option value="sp">SP</option>
+            <option value="mg">MG</option>
+            <option value="rs">RS</option>
+            <option value="mr">MR</option>
+            <option value="bh">BH</option>
+         </select><br><br>
+
+         Observações: <br>
+         <textarea></textarea><br><br>
+
+         <input type="submit" value="Cadastrar"> 
+
+      </form>
       </body>
 </html>
